--- a/template/header.html
+++ b/template/header.html
@@ -16,20 +16,20 @@
 <body>
   <header id="header">
     <div class="inner">
-      <a target="_blank" href="/index.html" class="logo"><img src="/images/logo.png" width="70px" height="70px" /></a>
+      <a  href="/index.html" class="logo"><img src="/images/logo.png" width="70px" height="70px" /></a>
       <nav id="nav">
-        <a target="_blank" href="/index.html">Home</a>
+        <a href="/index.html">Home</a>
         <div class="dropdown">
-          <a target="_blank" href="/mvf/MVF1-Account_management.html">Minimal Viable Features ﹀</a>
+          <a href="/mvf/MVF1-Account_management.html">Minimal Viable Features ﹀</a>
           <div class="dropdown-content">
-            <a target="_blank" href="/mvf/MVF1-Account_management.html">Account management</a> <br>
-            <a target="_blank" href="/mvf/MVF2-Slider.html">Slider</a> <br>
-            <a target="_blank" href="/mvf/MVF3-Data_collection_and_recommendation.html">Kitchen and Pantry System</a>
+            <a  href="/mvf/MVF1-Account_management.html">Account management</a> <br>
+            <a  href="/mvf/MVF2-Slider.html">Slider</a> <br>
+            <a  href="/mvf/MVF3-Data_collection_and_recommendation.html">Kitchen and Pantry System</a>
             <br>
-            <a target="_blank" href="/mvf/MVF4-Recipe_information.html">Recipe thumbnail</a> <br>
-            <a target="_blank" href="/mvf/MVF5-Step-by-step_instructions.html">Step-by-step instructions</a> <br>
-            <a target="_blank" href="/mvf/MVF6-Tags_and_searching.html">Tags and searching</a> <br>
-            <a target="_blank" href="/mvf/MVF7-Upload_and_manage_posts.html">Upload and manage posts</a> <br>
+            <a  href="/mvf/MVF4-Recipe_information.html">Recipe thumbnail</a><br>
+            <a  href="/mvf/MVF5-Step-by-step_instructions.html">Step-by-step instructions</a> <br>
+            <a  href="/mvf/MVF6-Tags_and_searching.html">Tags and searching</a> <br>
+            <a  href="/mvf/MVF7-Upload_and_manage_posts.html">Upload and manage posts</a> <br>
 
           </div>
         </div>
@@ -37,23 +37,23 @@
 
 
         <div class="dropdown ">
-          <a target="_blank" href="/other/estimate.html">Plan ﹀</a>
+          <a  href="/other/estimate.html">Plan ﹀</a>
           <div class="dropdown-content">
-            <a target="_blank" href="/plan/how.html"> Technologies</a>
-            <a target="_blank" href="/plan/estimate.html">Estimation Plan</a> <br> </div>
+            <a  href="/plan/how.html"> Technologies</a>
+            <a  href="/plan/estimate.html">Estimation Plan</a> <br> </div>
         </div>
         <div class="dropdown">
-          <a target="_blank" href="/github/commits.html">Other ﹀</a>
+          <a  href="/github/commits.html">Other ﹀</a>
           <div class="dropdown-content">
-            <a target="_blank" href="/github/commits.html">Github Commits</a> <br>
-            <a target="_blank" href="/other/team-meeting.html ">Team Meetings</a> <br>
-            <a target="_blank" href="/other/trello-task.html">Trello Task</a> <br>
-            <a target="_blank" href="/other/github-activity.html">GitHub Activity</a> <br>
+            <a  href="/github/commits.html">Github Commits</a> <br>
+            <a  href="/other/team-meeting.html ">Team Meetings</a> <br>
+            <a  href="/other/trello-task.html">Trello Task</a> <br>
+            <a  href="/other/github-activity.html">GitHub Activity</a> <br>
 
           </div>
         </div>
 
-        <!-- <a target="_blank" href="elements.html">Elements</a> -->
+        <!-- <a  href="elements.html">Elements</a> -->
       </nav>
     </div>
   </header>
