feat(profile): user access profile

--- a/src/main/resources/templates/fragment/common.html
+++ b/src/main/resources/templates/fragment/common.html
@@ -41,25 +41,6 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#"><i class="iconfont icon-tag mr-1"></i>Tags</a>
                 </li>
-           <!--
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Dropdown
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                    </div>
-                </li>
-                -->
-                <!--
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                </li>
-               -->
             </ul>
             <form class="form-inline mx-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -69,6 +50,9 @@
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="/login">Join us! Login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/user/profile"><i class="icon-seeuser iconfont"></i></a>
                 </li>
             </ul>
         </div>
@@ -126,6 +110,7 @@
     <!--  request http lib  -->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+    <script src="/js/public/common.js"></script>
 </div>
 </body>
 </html>
