--- a/src/main/resources/templates/user/kitchen.html
+++ b/src/main/resources/templates/user/kitchen.html
@@ -19,8 +19,8 @@
         </div>
         <h2 class="text-grad-888276 ">Admin's Kitchen</h2>
         <div class="my-2">
-            <button class="btn bg-red-C14A4A rounded-50  mx-2"><i class="iconfont icon-pencil"></i> Edit Profile
-            </button>
+            <a href="/user/profile" class="btn bg-red-C14A4A rounded-50  mx-2"><i class="iconfont icon-pencil"></i> Edit Profile
+            </a>
             <button class=" btn bg-red-C14A4A rounded-50  mx-2"><i class="iconfont icon-cross"></i>Add a recipe</button>
         </div>
 
@@ -39,7 +39,6 @@
                 <div class="d-flex flex-column">
                     <h2>Title</h2>
                     <p> description</p>
-
                 </div>
             </div>
             <div class="ml-2">
