--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -21,11 +21,11 @@
             </div>
             <div class="form-group">
                 <label for="username" class="mt-auto"><i class="iconfont icon-seeuser"></i> Username</label>
-                <input type="text" class="form-control rounded-pill" id="username" >
+                <input type="text" class="form-control rounded-pill" id="username" th:value="${user.username}" >
             </div>
             <div class="form-group">
                 <label for="email"><i class="iconfont icon-EmailHili"></i>Email</label>
-                <input type="password" class="form-control rounded-pill" id="email">
+                <input type="password" class="form-control rounded-pill" id="email" >
             </div>
             <div class="form-group">
                 <label for="oldPassword"><i class="iconfont icon-lock mb-2"></i>Old Password</label>
@@ -43,7 +43,7 @@
 
 
 <th:block th:include="/fragment/common.html :: scripts"></th:block>
-<script type="text/javascript" src="/js/">
+<script type="text/javascript" src="/js/user/profile.js">
 </script>
 <script th:inline="javascript">
 
