feat(profile): user access add recipe

--- a/src/main/resources/templates/fragment/common.html
+++ b/src/main/resources/templates/fragment/common.html
@@ -52,7 +52,7 @@
                     <a class="nav-link" href="/login">Join us! Login</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/user/profile"><i class="icon-seeuser iconfont"></i></a>
+                    <a class="nav-link" href="/user/kitchen"><i class="icon-seeuser iconfont"></i></a>
                 </li>
             </ul>
         </div>
