--- a/src/main/resources/templates/recipe/show.html
+++ b/src/main/resources/templates/recipe/show.html
@@ -6,23 +6,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Cookiez - Add a recipe</title>
+    <title>Hello Bulma!</title>
 
 </head>
 <body>
 <header th:replace="/fragment/common.html :: header"></header>
-<div class="container d-flex flex-column">
-    <input type="text" placeholder="Please enter recipe name">
-    <div class="bg-grad-888276">123123</div>
-    <button class="btn btn-primary">Upload cover</button>
-    <textarea placeholder="Describe Your Recipe"></textarea>
-    <input type="text" placeholder="Add Tags">
-<div class="d-flex flex-column">
-    <div>
-        <input type="text" placeholder="Name"> <input type="text" placeholder="">
-    </div>
-</div>
-</div>
+<div class="container"></div>
 
 
 
