--- a/src/main/resources/templates/user/kitchen.html
+++ b/src/main/resources/templates/user/kitchen.html
@@ -21,7 +21,7 @@
         <div class="my-2">
             <a href="/user/profile" class="btn bg-red-C14A4A rounded-50  mx-2"><i class="iconfont icon-pencil"></i> Edit Profile
             </a>
-            <button class=" btn bg-red-C14A4A rounded-50  mx-2"><i class="iconfont icon-cross"></i>Add a recipe</button>
+            <a class=" btn bg-red-C14A4A rounded-50  mx-2" href="/recipe/add"><i class="iconfont icon-cross"></i>Add a recipe</a>
         </div>
 
     </div>
