feat(profile):update- user access add recipe

--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -1,32 +1,60 @@
 
-
 .bg-red-C14A4A {
     color: white;
     background-color: #C14A4A;
 }
-.text-grad-888276{
+
+.text-grad-888276 {
 
     color: #888276;
 }
-.bg-grad-888276{
+
+.bg-grad-888276 {
 
     background-color: #888276;
 }
-.border-red-C14A4A{
-    border:  3px #C14A4A solid ;
-    border-radius: 20px;
+
+.input-red {
+    height: 40px;
+    width: 40%;
+    border-radius: 10px;
+    border: 3px #C14A4A solid;
+
     box-shadow: 2px 2px 5px #888888;
 }
-.rounded-50{
+.input-area-red {
+
+    border-radius: 10px;
+    border: 3px #C14A4A solid;
+
+    box-shadow: 2px 2px 5px #888888;
+}
+.btn-red {
+    color: white;
+    background-color: #C14A4A;
     border-radius: 50px;
     box-shadow: 2px 2px 5px #888888;
 }
-.rounded-20{
+
+.border-red-C14A4A {
+    border: 3px #C14A4A solid;
     border-radius: 20px;
-}
-.shadow-2-2-5{
     box-shadow: 2px 2px 5px #888888;
 }
+
+.rounded-50 {
+    border-radius: 50px;
+    box-shadow: 2px 2px 5px #888888;
+}
+
+.rounded-20 {
+    border-radius: 20px;
+}
+
+.shadow-2-2-5 {
+    box-shadow: 2px 2px 5px #888888;
+}
+
 .navbar {
     background-color: #C14A4A;
 }
@@ -52,7 +80,9 @@
 .footer {
     background-color: #E5474B;
 }
-
+.w-60{
+    width: 60%;
+}
 
 
 
