add icons in homepage

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,7 +15,7 @@
 
 <!-- Banner -->
 <div class="container d-flex justify-content-center">
-    <div class="row my-5 w-75 animate__fadeInRightBig animate__bounceIn">
+    <div class="row my-5 w-85 animate__fadeInRightBig animate__bounceIn">
         <div id="carousel" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-target="#carousel" data-slide-to="0" class="active"></li>
@@ -50,7 +50,7 @@
 </div>
 
 <div class="container d-flex justify-content-center">
-        <div class="row w-75">
+        <div class="row w-85">
             <!--
             <tr th:each="recipe : ${recipes}">
                 <div class="col-sm-4">
@@ -70,47 +70,62 @@
             </tr>
             -->
 
-            <div class="col-sm-4">
-            <div class="card" style="width: 225px;  margin: center;">
+            <div class="col-sm-3">
+            <div class="card" style="color: #C14A4A; width: 225px;  margin: center;">
                 <img src="/images/fired_rice.jpg" class="card-img-top" alt="">
                 <div class="card-body">
                     <h5 class="card-title">Fired rice</h5>
                     <p class="card-text">Author: Zhihao Liang</p>
                 </div>
                 <div class="card-body text-center">
-                    <a href="#" class="card-link">link  </a>
-                    <a href="#" class="card-link">link  </a>
-                    <a href="#" class="card-link">link</a>
+                    <a href="#" class="card-link"><i class="fa fa-bookmark" style="color: #C14A4A" aria-hidden="true"> </i></a>
+                    <a href="#" class="card-link"><i class="fa fa-bars" style="color: #C14A4A" aria-hidden="true"></i> </a>
+                    <a href="#" class="card-link"><i class="far fa-heart" style="color: #C14A4A" aria-hidden="true"></i> </a>
                 </div>
             </div>
         </div>
 
-            <div class="col-sm-4">
-                <div class="card" style="width: 225px;  margin: center;">
+            <div class="col-sm-3">
+                <div class="card" style="color: #C14A4A; width: 225px;  margin: center;">
                     <img src="/images/salad.jpg" class="card-img-top" alt="">
                     <div class="card-body">
                         <h5 class="card-title">Salad</h5>
                         <p class="card-text">Author</p>
                     </div>
                     <div class="card-body text-center">
-                        <a href="#" class="card-link">link  </a>
-                        <a href="#" class="card-link">link  </a>
-                        <a href="#" class="card-link">link</a>
+                        <a href="#" class="card-link"><i class="fa fa-bookmark" style="color: #C14A4A" aria-hidden="true"> </i></a>
+                        <a href="#" class="card-link"><i class="fa fa-bars" style="color: #C14A4A" aria-hidden="true"></i> </a>
+                        <a href="#" class="card-link"><i class="far fa-heart" style="color: #C14A4A" aria-hidden="true"></i> </a>
                     </div>
                 </div>
             </div>
 
-            <div class="col-sm-4">
-                <div class="card" style="width: 225px;  margin: right;">
+            <div class="col-sm-3">
+                <div class="card" style="color: #C14A4A; width: 225px;  margin: right;">
                     <img src="/images/oat_pancake.jpg" class="card-img-top" alt="">
                     <div class="card-body">
                         <h5 class="card-title">Oat pancake</h5>
                         <p class="card-text">Author</p>
                     </div>
                     <div class="card-body text-center">
-                        <a href="#" class="card-link">link</a>
-                        <a href="#" class="card-link">link</a>
-                        <a href="#" class="card-link">link</a>
+                        <a href="#" class="card-link"><i class="fa fa-bookmark" style="color: #C14A4A" aria-hidden="true"> </i></a>
+                        <a href="#" class="card-link"><i class="fa fa-bars" style="color: #C14A4A" aria-hidden="true"></i> </a>
+                        <a href="#" class="card-link"><i class="far fa-heart" style="color: #C14A4A" aria-hidden="true"></i> </a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-sm-3">
+                <div class="card" style="color: #C14A4A; width: 225px;  margin: center;">
+                    <img src="/images/lava_cake.png" class="card-img-top" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">Lava cake</h5>
+                        <p class="card-text">Author</p>
+                    </div>
+                    <div class="card-body text-center">
+                        <a href="#" class="card-link"><i class="fa fa-bookmark" style="color: #C14A4A" aria-hidden="true"> </i></a>
+                        <a href="#" class="card-link"><i class="fa fa-bars" style="color: #C14A4A" aria-hidden="true"></i> </a>
+                        <a href="#" class="card-link"><i class="far fa-heart" style="color: #C14A4A" aria-hidden="true"></i> </a>
                     </div>
                 </div>
             </div>
@@ -118,8 +133,8 @@
 </div>
 
 <div class="container d-flex justify-content-center my-5">
-    <div class="row w-75">
-        <div class="col-sm-4">
+    <div class="row w-85">
+        <div class="col-sm-3">
             <div class="card" style="width: 225px;  margin: center;">
                 <img src="/images/pasta.jpg" class="card-img-top" alt="">
                 <div class="card-body">
@@ -127,14 +142,14 @@
                     <p class="card-text">Author</p>
                 </div>
                 <div class="card-body text-center">
-                    <a href="#" class="card-link">link  </a>
-                    <a href="#" class="card-link">link  </a>
-                    <a href="#" class="card-link">link</a>
+                    <a href="#" class="card-link"><i class="fa fa-bookmark" style="color: #C14A4A" aria-hidden="true"> </i></a>
+                    <a href="#" class="card-link"><i class="fa fa-bars" style="color: #C14A4A" aria-hidden="true"></i> </a>
+                    <a href="#" class="card-link"><i class="far fa-heart" style="color: #C14A4A" aria-hidden="true"></i> </a>
                 </div>
             </div>
         </div>
 
-        <div class="col-sm-4">
+        <div class="col-sm-3">
             <div class="card" style="width: 225px;  margin: center;">
                 <img src="/images/blueberry_muffin.jpg" class="card-img-top" alt="">
                 <div class="card-body">
@@ -142,14 +157,14 @@
                     <p class="card-text">Author: Heran Wang</p>
                 </div>
                 <div class="card-body text-center">
-                    <a href="#" class="card-link">link  </a>
-                    <a href="#" class="card-link">link  </a>
-                    <a href="#" class="card-link">link</a>
+                    <a href="#" class="card-link"><i class="fa fa-bookmark" style="color: #C14A4A" aria-hidden="true"> </i></a>
+                    <a href="#" class="card-link"><i class="fa fa-bars" style="color: #C14A4A" aria-hidden="true"></i> </a>
+                    <a href="#" class="card-link"><i class="far fa-heart" style="color: #C14A4A" aria-hidden="true"></i> </a>
                 </div>
             </div>
         </div>
 
-        <div class="col-sm-4">
+        <div class="col-sm-3">
             <div class="card" style="width: 225px;  margin: right;">
                 <img src="/images/veg_burger.jpg" class="card-img-top" alt="">
                 <div class="card-body">
@@ -157,9 +172,24 @@
                     <p class="card-text">Author</p>
                 </div>
                 <div class="card-body text-center">
-                    <a href="#" class="card-link">link</a>
-                    <a href="#" class="card-link">link</a>
-                    <a href="#" class="card-link">link</a>
+                    <a href="#" class="card-link"><i class="fa fa-bookmark" style="color: #C14A4A" aria-hidden="true"> </i></a>
+                    <a href="#" class="card-link"><i class="fa fa-bars" style="color: #C14A4A" aria-hidden="true"></i> </a>
+                    <a href="#" class="card-link"><i class="far fa-heart" style="color: #C14A4A" aria-hidden="true"></i> </a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-sm-3">
+            <div class="card" style="width: 225px;  margin: right;">
+                <img src="/images/shrimp.png" class="card-img-top" alt="">
+                <div class="card-body">
+                    <h5 class="card-title">Shrimp</h5>
+                    <p class="card-text">Author</p>
+                </div>
+                <div class="card-body text-center">
+                    <a href="#" class="card-link"><i class="fa fa-bookmark" style="color: #C14A4A" aria-hidden="true"> </i></a>
+                    <a href="#" class="card-link"><i class="fa fa-bars" style="color: #C14A4A" aria-hidden="true"></i> </a>
+                    <a href="#" class="card-link"><i class="far fa-heart" style="color: #C14A4A" aria-hidden="true"></i> </a>
                 </div>
             </div>
         </div>
