--- a/src/main/resources/templates/fragment/common.html
+++ b/src/main/resources/templates/fragment/common.html
@@ -69,6 +69,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/login">Join us! Login</a>
                 </li>
+                <li>
+                    <a class="nav-link" href="/login"><i class="far fa-user-circle fa-lg" style="color: #fff"></i></a>
+                </li>
             </ul>
         </div>
     </nav>
