--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,6 @@
     <title>Hello Cookiez!</title>
 
 </head>
-<body>
 <!-- Header -->
 <header th:replace="/fragment/common.html :: header"></header>
 
@@ -187,14 +186,34 @@
                     <p class="card-text">Author</p>
                 </div>
                 <div class="card-body text-center">
-                    <a href="#" class="card-link"><i class="fa fa-bookmark" style="color: #C14A4A" aria-hidden="true"> </i></a>
-                    <a href="#" class="card-link"><i class="fa fa-bars" style="color: #C14A4A" aria-hidden="true"></i> </a>
-                    <a href="#" class="card-link"><i class="far fa-heart" style="color: #C14A4A" aria-hidden="true"></i> </a>
+                    <div>
+                        <a href="#" class="card-link"><i class="fa fa-bookmark" style="color: #C14A4A" aria-hidden="true"> </i></a>
+                        <a href="#" class="card-link"><i class="fa fa-bars" style="color: #C14A4A" aria-hidden="true"></i> </a>
+                        <a id="light" class="card-link" style="display: inline; clear: both; "><i class="far fa-heart" style="color: #C14A4A" aria-hidden="true"></i> </a>
+                        <a id="solid" class="card-link" style="display: none; "><i class="fa fa-heart" style="color: #C14A4A" aria-hidden="true"></i> </a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
+<script type="text/javascript">
+  var light = document.getElementById("light");
+  var solid = document.getElementById("solid");
+
+  //change it to solid
+  light.onclick=function(){
+    this.style.display = 'none';
+    solid.style.display = 'inline';
+
+  }
+  //change it to light
+  solid.onclick=function(){
+    this.style.display = 'none';
+    light.style.display = 'inline';
+  }
+</script>
 
 <!-- Footer -->
 <footer th:replace="/fragment/common.html :: footer"></footer>
