feat(profile):update- user access add recipe

--- a/src/main/resources/templates/fragment/base-structure.html
+++ b/src/main/resources/templates/fragment/base-structure.html
@@ -11,13 +11,14 @@
 </head>
 <body>
 <header th:replace="/fragment/common.html :: header"></header>
-<div class="container"></div>
+<div class="container">
 
+</div>
 
 
 <th:block th:include="/fragment/common.html :: scripts"></th:block>
-<script type="text/javascript" src="/js/">
-</script>
+<!--<script type="text/javascript" src="/js/">-->
+<!--</script>-->
 <script th:inline="javascript">
 
 </script>
