add step by step instructions(FOOTER) and add a map in controller

--- a/src/main/resources/templates/recipe/detail.html
+++ b/src/main/resources/templates/recipe/detail.html
@@ -11,15 +11,15 @@
 </head>
 <body>
 <header th:replace="/fragment/common.html :: header"></header>
+
 <!-- Description area-->
 
 <!-- Ingredients area-->
 
 <!-- Instructions area-->
 
-<th:block th:include="/fragment/common.html :: scripts"></th:block>
-<script type="text/javascript" src="/js/">
-</script>
+<footer th:replace="/fragment/common.html :: footer"></footer>
+
 <script th:inline="javascript">
 
 </script>
