--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -42,6 +42,12 @@
     box-shadow: 2px 2px 5px #888888;
 }
 
+.border-green-28A745{
+    border: 3px #28A745 solid;
+    border-radius: 20px;
+    box-shadow: 2px 2px 5px #888888;
+}
+
 .rounded-50 {
     border-radius: 50px;
     box-shadow: 2px 2px 5px #888888;
@@ -79,11 +85,14 @@
 
 .footer {
     background-color: #E5474B;
+    margin-top: 200px;
 }
 .w-60{
     width: 60%;
 }
 
+.my-10{margin-top:12rem!important}
+.text-inkfree{font-family: "Ink Free"}
 
 
 
