--- a/src/main/resources/templates/fragment/common.html
+++ b/src/main/resources/templates/fragment/common.html
@@ -16,12 +16,13 @@
     />
     <link rel="stylesheet" href="/css/app.css">
     <link rel="stylesheet" href="/css/icon.css">
+    <link rel="stylesheet" href="/css/icon2.css">
 
 </head>
 <body>
 <header th:fragment="header">
     <!--use d-flex and justify-content-center to manage layout !-->
-    <nav class="navbar d-flex justify-content-center navbar-expand-lg navbar-light">
+    <nav class="navbar d-flex justify-content-center navbar-expand-lg navbar-light ">
         <a class="logo" href="/">
             <img src="/images/logo.png" width="40px" height="40px" alt="CookieZ" />
         </a>
@@ -29,25 +30,25 @@
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-
-        <div class="d-flex justify-content-center" id="navbarSupportedContent">
-            <ul class="navbar-nav">
-                <li class="nav-item">
+<!--        justify-content-center-->
+        <div class="d-flex " style="width: 980px;" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-4">
+                <li class="nav-item ml-4">
                     <a class="nav-link" href="/"><i class="iconfont icon-xuanzhongshangcheng"></i> Home <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/pantry"><i class="iconfont icon-lanzi mr-1"></i>Pantry</a>
+                <li class="nav-item ml-4">
+                    <a class="nav-link" href="/pantry/show"><i class="iconfont icon-lanzi mr-1"></i>Pantry</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/tags"><i class="iconfont icon-tag mr-1"></i>Tags</a>
+                <li class="nav-item ml-4">
+                    <a class="nav-link" href="#"><i class="iconfont icon-tag mr-1"></i>Tags</a>
                 </li>
             </ul>
-            <form class="form-inline mx-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <form class="form-inline mx-2 my-lg-0 ml-5">
+                <input class="form-control mr-sm-2 ml-4" style="width:20em; height:2em" type="search" placeholder="Search" aria-label="Search">
 
                 <button class="btn btn-outline-danger my-2 my-sm-0" type="submit"><i class="fa fa-search"></i></button>
             </form>
-            <ul class="navbar-nav">
+            <ul class="navbar-nav " style="margin-left: 3.5em">
                 <li class="nav-item">
                     <a class="nav-link" href="/login">Join us! Login</a>
                 </li>
@@ -62,9 +63,9 @@
 </header>
 
 <footer th:fragment="footer">
-    <div class="footer mt-auto d-flex justify-content-center">
-        <center>
-            <div>
+    <div class="inner footer">
+
+            <div class="text-center text-white ">
                 <p>
                     <strong>Cookiez</strong> by "Ditto"<i class="fa fa-bug"></i>
                 </p>
@@ -80,7 +81,7 @@
                     <i class="fa fa-coffee"></i>
                 </p>
             </div>
-        </center>
+
     </div>
 </footer>
 
